# Aurita

./: .gitignore  CLAUDE.md  Cargo.toml  WIKI.md
backends/: maxima_bridge.py  python_bridge.py
src/: lib.rs  main.rs
src/cas/: backend.rs  cache.rs  manager.rs  mod.rs  protocol.rs  router.rs
src/cas/backends/: maxima.rs  mod.rs  symbolics.rs  sympy.rs
src/lang/: ast.rs  builtins.rs  env.rs  error.rs  eval.rs  lexer.rs  mod.rs  parser.rs  token.rs  types.rs
src/persistence/: config.rs  history.rs  mod.rs  session.rs
src/physics/: constants.rs  error_prop.rs  mod.rs  units.rs
src/plot/: mod.rs  render.rs  types.rs
src/symbolic/: expr.rs  mod.rs  pretty.rs  serialize.rs  simplify.rs
src/tui/: app.rs  completion.rs  event.rs  help.rs  hints.rs  input.rs  mod.rs  output.rs  sidebar.rs  status.rs  theme.rs
tests/: cas_integration.rs
