[package]
name = "aurita"
version = "0.7.0"
edition = "2021"
description = "Terminal-based computer algebra system"

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
crossterm = "0.28"
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }

# Serialization (for CAS IPC protocol)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (for non-blocking CAS calls)
tokio = { version = "1", features = ["full"] }

# Encoding
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Plotting
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series", "bitmap_encoder"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# Caching
lru = "0.12"

# Unicode
unicode-width = "0.2"

# Persistence
dirs = "6"
toml = "0.8"

[dev-dependencies]
pretty_assertions = "1"
